--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <nav>
         <a class="logo" href="index.html">Filipe Santos</a>
 
+        <button>
+            &#9776;
+        </button>
+
         <ul>
             <li>
                 <a href="#" id="menuSobre">Sobre</a>
@@ -119,7 +123,7 @@
                 
                 <ul>
                     <li>
-                        <a href="" target="_blank">
+                        <a href="https://filipesantos07.github.io/portfolio02/" target="_blank">
                             <p><span>Meu segundo portfolio</span></p>
                             <img src="assets/novoport.png" alt="Foto do novo portfolio de Filipe">
                             <p>Esse é meu segundo portfolio, eu queria mudar o visual do primeiro, aí coloquei a barra de navegação do jeito tradicional lá em cima. Coloquei uma rolagem suave de navegação entre as sessões, pelo JavaScript. Selecionei uma paleta de cores que combinam entre si, gostei muito do resultado ^^</p>
