--- a/index.html
+++ b/index.html
@@ -12,27 +12,31 @@
     <nav>
         <a class="logo" href="index.html">Filipe Santos</a>
 
-        <button>
-            &#9776;
-        </button>
-
         <ul>
             <li>
                 <a href="#" id="menuSobre">Sobre</a>
             </li>
+
             <li>
                 <a href="#" id="menuTecnologias">Tecnologias</a>
             </li>
+
             <li>
                 <a href="#" id="menuQualificação">Qualificação</a>
             </li>
+
             <li>
                 <a href="#" id="menuPortfolio">Portfolio</a>
             </li>
+
             <li>
                 <a href="#" id="menuContato">Contato</a>
             </li>
         </ul>
+
+        <div class="menu-icon" onclick="abrirMenu()">
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </nav>
 
     <div class="container">
