fixed a wrong sentence

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
                     <li>
                         <a href="https://filipesantos07.github.io/analizador-de-numeros/" target="_blank">
-                        <p><span>Analizador de números</span></p>
+                        <p><span>Analisador de números</span></p>
                         
                             <img src="assets/analizador de numeros.png" alt="foto do analisador de números de filipe">
                         
