improved css grouping

--- a/index.html
+++ b/index.html
@@ -337,7 +337,9 @@
         </main>
 
         <footer>
-            <p><i class="fa-regular fa-copyright"></i> Filipe Santos - 2022</p>
+            <p>
+                <i class="fa-regular fa-copyright"></i> Filipe Santos - 2022
+            </p>
         </footer>
     </div>
 
