--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <img src="assets/desafio formulario intermediário.png" alt="foto do formulário intermediário de filipe">
                             <p>
                                 One more Rocketseat challenge has been done, this time an amazing form \o/.
-                                Nesse desafio da Rocketseat, foi nos dado o layout desse formulário pelo figma, para que replicassemos o mais igual possível. E esse foi o resultado hehe, eu aproveitei e o deixei responsivo e como sempre dei uma pitada de animações xD, deu para treinar bastante codando.
+                                Nesse desafio da Rocketseat, foi nos dado o layout desse formulário pelo figma, para que replicassemos o mais igual possível. E esse foi o resultado hehe. Como sempre dei uma pitada de animações, deu para treinar bastante codando.
                             </p>
                         </a>
                         
