added one more project

--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
                 
                 <ul>
                     <li>
+                        <a href="https://filipesantos07.github.io/Rocketseat-desafio-formulario-avancado/" target="_blank">
+                            <p><span>Formulário avançado Rocketseat</span></p>
+                            <img src="assets/rocketseat form avancado.png" alt="foto do formulário avançado de filipe">
+                            <p>
+                                Finalizei o desafio do formulário avançado da Rocketseat, totalmente do zero através do Figma. Ficou muito lindo, tive uma ideia de usar as próprias cores da logo da Rocket nesse formulário, pois a gente poderia alterar cores e adicionar mais campos se quiséssemos. Adicionei responsividade e animações que deu um toque super bacana. Nesse módulo de formulários eu aprendi a fazer um checkbox customizado e acessível, mudar backgrounds de campos, validações e muito mais. 
+                            </p>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://filipesantos07.github.io/Rocketseat-desafio-formulario-intermediario/" target="_blank">
                             <p><span>Formulário intermediário Rocketseat</span></p>
                             <img src="assets/desafio formulario intermediário.png" alt="foto do formulário intermediário de filipe">
