added one more project

--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
                 
                 <ul>
                     <li>
+                        <a href="https://filipesantos07.github.io/Rocketseat-responsividade-projeto-01/" target="_blank">
+                            <p><span>Responsividade projeto 01</span></p>
+                            <img src="assets/responsividade1.png" alt="Foto do projeto 01 de responsividade de filipe">
+                            <p>
+                                Entramos na parte de responsividade, e esse foi o projeto que fizemos para nos aprofundar nesse sentido. Muito interessante a diferença do PX pro REM em um layout responsivo, a partir de agora estou dando adeus ao PX, hehe. Também vimos sobre o mobile first e a facilidade de criar primeiro layout do mobile e depois o desktop, para nos poupar tempo.
+                            </p>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://filipesantos07.github.io/Rocketseat-desafio-formulario-avancado/" target="_blank">
                             <p><span>Formulário avançado Rocketseat</span></p>
                             <img src="assets/rocketseat form avancado.png" alt="foto do formulário avançado de filipe">
