added spacecream project

--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@
                 
                 <ul>
                     <li>
+                        <a href="https://filipesantos07.github.io/Rocketseat-desafio-Space-Cream/" target="_blank">
+                            <p><span>Desafio Space Crea</span>m</p>
+                            <img src="assets/space.png" alt="Desafio space cream da rocketseat">
+                            <p>
+                                Último desafio do stage 3 da trilha explorer da Rocketseat succssesfully finished. Feito 100% do zero através de um layout do figma, nele aprendi sobre mobile first, responsividade, grid layout, variáveis no css and so on \o/.
+                            </p>
+
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://filipesantos07.github.io/Rocketseat-responsividade-projeto-01/" target="_blank">
                             <p><span>Responsividade projeto 01</span></p>
                             <img src="assets/responsividade1.png" alt="Foto do projeto 01 de responsividade de filipe">
