added a new project

--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
                 
                 <ul>
                     <li>
+                        <a href="https://filipesantos07.github.io/Cadastrando-um-paciente-e-interagindo-com-ele/" target="_blank">
+                            <p><span>Cadastrando um paciente e interagindo com ele</span></p>
+                            <img src="healthy heart.png" alt="foto do projeto menu interativo de filipe">
+                            <p>
+                                Colocando em prática todo o aprendizado adquirido até o momento no stage 04 trilha Explorer - Rocketseat. Com os ensinamentos do Maykão eu consegui desenvolver esse simples menu de cadastro interativo. O paciente pode fazer o seu cadastro digitando 1, ver seus dados de cadastro digitando 2(caso não exista nenhum cadastro, aparecerá um alerta informando que não há dados cadastrados), digitando o número 3 o paciente poderá apagar os seus dados de cadastro(caso não haja dados cadastrados aparecerá um alerta informando que não há dados a serem apagados) e por fim o usuário poderá sair da aplicação digitando o número 4(caso o usuário digite alguma opção que não exista, aparecerá um alerta informando que a opção digitada é inválida). De verdade eu tou muito feliz com minha evolução em lógica de programação e algoritmos, as coisas estão começando a fazer sentido.
+                            </p>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://filipesantos07.github.io/Rocketseat-desafio-Space-Cream/" target="_blank">
                             <p><span>Desafio Space Crea</span>m</p>
                             <img src="assets/space.png" alt="Desafio space cream da rocketseat">
