--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@
                 
                 <ul>
                     <li>
+                        <a href="https://filipesantos07.github.io/Jogo-adivinhacao-Stage-5-Rocketseat/" target="_blank">
+                            <p><span>Jogo da adivinhação - Stage 5 Explorer - Rocketseat</span></p>
+                            <img src="assets/jogoadv.png" alt="foto do projeto jogo da adivinhação de filipe">
+                            <p>
+                                Jogo da adivinhação construído no stage 5 (Avançando no JavaScript) trilha Explorer da Rocketseat.
+                                Nesse projeto eu aprendi sobre DOM e seus eventos, aprendi a manipular elementos com DOM, receber e modificar valores, alterar estilos, capturar valores dos inputs, adicionar eventos em botões com o addEventListener(), interromper o padrão de um elemento com o preventDefault(), funções callback e muito mais!
+                            </p>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://filipesantos07.github.io/Cadastrando-um-paciente-e-interagindo-com-ele/" target="_blank">
                             <p><span>Cadastrando um paciente e interagindo com ele</span></p>
                             <img src="assets/healthy heart.png" alt="foto do projeto menu interativo de filipe">
