added new project

--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
                     <li>
                         <a href="https://filipesantos07.github.io/Jogo-adivinhacao-Stage-5-Rocketseat/" target="_blank">
                             <p><span>Jogo da adivinhação - Stage 5 Explorer - Rocketseat</span></p>
-                            <img src="assets/jogoadv.png" alt="foto do projeto jogo da adivinhação de filipe">
+                            <img src="assets/lightmode.png" alt="foto do projeto jogo da adivinhação de filipe">
                             <p>
                                 Jogo da adivinhação construído no stage 5 (Avançando no JavaScript) trilha Explorer da Rocketseat.
                                 Nesse projeto eu aprendi sobre DOM e seus eventos, aprendi a manipular elementos com DOM, receber e modificar valores, alterar estilos, capturar valores dos inputs, adicionar eventos em botões com o addEventListener(), interromper o padrão de um elemento com o preventDefault(), funções callback e muito mais!
+                                Ah, e com essas aulas que eu tive de JavaScript eu consegui bolar sozinho o dark mode pra essa aplicação, alterando as classes dos itens com classList.toggle(). Estou feliz demais por ter conseguido me desafiar.
                             </p>
                         </a>
                     </li>
