added a new project

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <p><span>Calculadora de IMC - Stage 5 Explorer Rocketseat</span></p>
                             <img src="assets/calculadoradeimc.png" alt="foto da calculadora de imc de filipe">
                             <p>
-                                Nesse projeto eu aprendi como criar um modal(pop-up), e fazer ele aparecer através do JS, informando o resultado do IMC na tela. Aprendi a criar uma caixa de alerta de erro personalizada, e fazer aparecer através do JS caso o usuário digite outro caractére que não seja número, ou se deixar o input vazio. Aprendi a estruturar os dados do projeto criando uma const com um object literal, e com as estruturas organizadas eu também aprendi a deixar o código mais organizado separando por módulos, com o ES6 modules, e muito mais!
+                                Nesse projeto eu aprendi como criar um modal(pop-up), e fazer ele aparecer através do JS, informando o resultado do IMC na tela. Aprendi a criar uma caixa de alerta de erro personalizada, e fazer aparecer através do JS caso o usuário digite outro caractere que não seja número, ou se deixar o input vazio. Aprendi a estruturar os dados do projeto criando uma const com um object literal, e com as estruturas organizadas eu também aprendi a deixar o código mais organizado separando por módulos, com o ES6 modules, e muito mais!
                             </p>
                         </a>
                     </li>
