--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
                 
                 <ul>
                     <li>
+                        <a href="https://filipesantos07.github.io/FocusTimer-2.0-with-DarkMode/" target="_blank">
+                            <p><span>FocusTimer with DarkMode - Stage 5 - Explorer - Rocketseat</span></p>
+                            <img src="assets/focusdarkmode.png" alt="projeto focustimer construído por Filipe">
+                            <p>
+                                Mais um desafio da Rocketseat concluído com sucesso! Feito do zero a partir de um layout do figma, eu fiz apenas algumas mudanças nas cores. O primeiro desafio era construir o focustimer 2.0, e o segundo era fazer a sua versão dark. Esses desafios são do stage 5 (avançando no JavaScript) da trilha Explorer da RocketSeat. Consegui absorver muito conhecimento nesse stage, e já vou me preparar pra entrar no stage 6, xD
+                            </p>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://filipesantos07.github.io/Stage-5-Calculadora-de-IMC/" target="_blank">
                             <p><span>Calculadora de IMC - Stage 5 Explorer Rocketseat</span></p>
                             <img src="assets/calculadoradeimc.png" alt="foto da calculadora de imc de filipe">
