added focustimer project

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <p><span>FocusTimer with DarkMode - Stage 5 - Explorer - Rocketseat</span></p>
                             <img src="assets/focusdarkmode.png" alt="projeto focustimer construído por Filipe">
                             <p>
-                                Mais um desafio da Rocketseat concluído com sucesso! Feito do zero a partir de um layout do figma, eu fiz apenas algumas mudanças nas cores. O primeiro desafio era construir o focustimer 2.0, e o segundo era fazer a sua versão dark. Esses desafios são do stage 5 (avançando no JavaScript) da trilha Explorer da RocketSeat. Consegui absorver muito conhecimento nesse stage, e já vou me preparar pra entrar no stage 6, xD
+                                Mais um desafio da Rocketseat concluído com sucesso! Feito do zero a partir de um layout do figma, eu fiz apenas algumas mudanças nas cores. O primeiro desafio era construir o focustimer 2.0, e o segundo era fazer a sua versão dark. Esses desafios são do stage 5 (avançando no JavaScript) da trilha Explorer da RocketSeat. Consegui absorver muito conhecimento nesse stage, estou amando cada dia mais o JavaScript, e que continue assim euhaeuahe.
                             </p>
                         </a>
                     </li>
