added a new pic

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h1>Filipe Santos</h1>
 
                 <p>
-                    Olá! Meu nome é <span>Filipe</span>, Sou um <span>Desenvolvedor Full Stack em formação na Rocketseat</span>. Trabalho atualmente com atendimento ao cliente, e também sou o cortador na <span>Slip Moda Praia</span>. Estou <span>apaixonado pela área da tecnologia</span>, venho <span>estudando todos os dias</span> para manter uma consistência e absorver o máximo de conteúdo possível. Que <span>universo mágico esse da programação</span>, estou me dedicando ao máximo pois quero muito me tornar um <span>desenvolvedor Jr</span> o mais breve possível <span>:)</span>.
+                    Olá! Meu nome é <span>Filipe</span>, Sou um <span>Desenvolvedor Full Stack Jr em formação na Rocketseat</span>. Estou <span>apaixonado pela área da tecnologia</span>, faço questão de estudar todos os dias para me manter dentro desse universo, assim minha curva de aprendizado será certamente menor. Estou me dedicando ao máximo pois quero muito me tornar um <span>programador Jr</span>.
                 </p>
                
             </section>
@@ -205,7 +205,7 @@
                     <li>
                         <a href="https://filipesantos07.github.io/portfolio02/" target="_blank">
                             <p><span>Meu segundo portfolio</span></p>
-                            <img src="assets/novoportfolio.png" alt="Foto do novo portfolio de Filipe">
+                            <img src="assets/port2.png" alt="Foto do novo portfolio de Filipe">
                             <p>Esse é meu segundo portfolio, eu queria mudar o visual do primeiro, aí coloquei a barra de navegação do jeito tradicional lá em cima. Coloquei uma rolagem suave de navegação entre as sessões, pelo JavaScript. Selecionei uma paleta de cores que combinam entre si, gostei muito do resultado ^^</p>
                         </a>
                     </li>
