added gitfav project

--- a/index.html
+++ b/index.html
@@ -126,6 +126,26 @@
                 
                 <ul>
                     <li>
+                        <a href="https://filipesantos07.github.io/Desafio-GitFav-Stage-6/" target="_blank">
+                            <p><span>Desafio GitFav - Stage 6 - Explorer - Rocketseat</span></p>
+                            <img src="assets/gitfav finished.png" alt="desafio gitfav feito por Filipe">
+                            <p>
+                                Último desafio do Stage 6 - trilha Explorer da Rocketseat concluído com sucesso! Esse é o GitFav, nele você poderá favoritar usuários do Github.
+                                Nesse desafio foi abordado:
+                                Criação de tabelas no HTML,
+                                Aprendendo a criar uma classe Sr only,
+                                Programação orientada a objetos (POO),
+                                Classes e heranças,
+                                Criando HTML pelo JavaScript,
+                                A importancia da imutabilidade,
+                                Conhecendo o localStorage,
+                                Métodos estáticos e promises,
+                                Async Await promises e
+                                Fluxo da aplicação com Try, Catch e Throw.
+                            </p>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://filipesantos07.github.io/FocusTimer-2.0-with-DarkMode/" target="_blank">
                             <p><span>FocusTimer with DarkMode - Stage 5 - Explorer - Rocketseat</span></p>
                             <img src="assets/focusdarkmode.png" alt="projeto focustimer construído por Filipe">
