--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <p>
                                 Último desafio do Stage 6 - trilha Explorer da Rocketseat concluído com sucesso! Esse é o GitFav, nele você poderá favoritar usuários do Github.
                                 Nesse desafio foi abordado:
-                                Criação de tabelas no HTML,
+                                Consumindo API do Github,
                                 Aprendendo a criar uma classe Sr only,
                                 Programação orientada a objetos (POO),
                                 Classes e heranças,
@@ -140,8 +140,8 @@
                                 A importancia da imutabilidade,
                                 Conhecendo o localStorage,
                                 Métodos estáticos e promises,
-                                Async Await promises e
-                                Fluxo da aplicação com Try, Catch e Throw.
+                                Async Await promises,
+                                Fluxo da aplicação com Try, Catch e Throw e Criação de tabelas no HTML.
                             </p>
                         </a>
                     </li>
