--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
                             <p><span>Desafio GitFav - Stage 6 - Explorer - Rocketseat</span></p>
                             <img src="assets/gitfavfinished.png" alt="desafio gitfav feito por Filipe">
                             <p>
-                                Último desafio do Stage 6 - trilha Explorer da Rocketseat concluído com sucesso! Esse é o GitFav, nele você poderá favoritar usuários do Github.
+                                Último desafio do Stage 6 - trilha Explorer da Rocketseat concluído com sucesso! Esse é o GitFav, nele você poderá favoritar usuários do Github e removê-los da lista.
                                 Nesse desafio foi abordado:
                                 Consumindo API do Github,
-                                Aprendendo a criar uma classe Sr only,
+                                Aprendendo a criar uma classe Screen reader only,
                                 Programação orientada a objetos (POO),
                                 Classes e heranças,
                                 Criando HTML pelo JavaScript,
