changed gitfav pic

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <li>
                         <a href="https://filipesantos07.github.io/Desafio-GitFav-Stage-6/" target="_blank">
                             <p><span>Desafio GitFav - Stage 6 - Explorer - Rocketseat</span></p>
-                            <img src="assets/gitfavfinished.png" alt="desafio gitfav feito por Filipe">
+                            <img src="assets/gitfavpic.png" alt="desafio gitfav feito por Filipe">
                             <p>
                                 Último desafio do Stage 6 - trilha Explorer da Rocketseat concluído com sucesso! Esse é o GitFav, nele você poderá favoritar usuários do Github e removê-los da lista.
                                 Nesse desafio foi abordado:
